# ember2024-cpp

main/: CMakeLists.txt
main/include/efeum/: helpers.h  mmapping.h
main/include/efeum/driver1/: communication.h  config.h
main/include/efeum/ml/: lgbm.h
main/include/efeum/scanning/: scan.h
main/src/: helpers.cpp  lgbm.cpp  main.cpp  mmapping.cpp  scan.cpp
main/src/driver1/: communication.cpp  config.cpp
pefile/include/efe/pefile/: dll_characteristics.h
